Adding swagger documentations to APIs
