# server.js
@@ -1,17 +1,23 @@
 import appProduct from "./product/src/appProduct.js";
 import appAccount from "./account/src/appAccount.js"
 
-const port = process.env.PORT || 3000;
+const portAppProduct = process.env.PORT || 3001;
+const portAppAccount = process.env.PORT || 3002;
+
 const apiChosen = process.argv
 
-if (apiChosen[2] == "Products") {
-    appProduct.listen(port, () => {
-        console.log(`Servidor escutando em http://localhost:${port}`)
-    })
+function pickPort (path) {
+    if (path[2] == "Products") {
+        appProduct.listen(portAppProduct, () => {
+            console.log(`Servidor escutando em http://localhost:${portAppProduct}`)
+        })
+    } else if (path[2] == "Accounts") {
+        appAccount.listen(portAppAccount, () => {
+            console.log(`Servidor escutando em http://localhost:${portAppAccount}`)
+        })
+    } else if (path[2] == undefined) {
+        console.log("Quando executar pela raiz, informe um caminho válido ao lado de npm run dev. Exemplos: npm run dev Products | npm run dev Accounts")
+    }
 }
 
-if (apiChosen[2] == "Accounts") {
-    appAccount.listen(port, () => {
-        console.log(`Servidor escutando em http://localhost:${port}`)
-    })
-}
+pickPort(apiChosen);
